--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
 </head>
 <body>
     <div class="container">
-        <input type="number">
-    </div>
-    <div>
-        <button>Delete</button>
-        <button>Clear</button>
-    </div>
-    <div>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>/</button>
-        <button>4</button>
-        <button>5</button>
-        <button>6</button>
-        <button>*</button>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>-</button>
-        <button>.</button>
-        <button>0</button>
-        <button>=</button>
-        <button>+</button>
+        <input class="display">
+        <div class="delete-buttons">
+            <button class="delete">Delete</button>
+            <button class="delete">Clear</button>
+        </div>
+        <div class="numbers">
+            <button>7</button>
+            <button>8</button>
+            <button>9</button>
+            <button>/</button>
+            <button>4</button>
+            <button>5</button>
+            <button>6</button>
+            <button>*</button>
+            <button>1</button>
+            <button>2</button>
+            <button>3</button>
+            <button>-</button>
+            <button>.</button>
+            <button>0</button>
+            <button>=</button>
+            <button>+</button>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
