--- a/index.html
+++ b/index.html
@@ -6,32 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>Calculadora</title>
-
 </head>
 <body>
     <div class="container">
-        <input class="display">
+        <input class="display" id="display-id" placeholder="0">
         <div class="delete-buttons">
-            <button class="delete">Delete</button>
-            <button class="delete">Clear</button>
+            <button class="delete" id="delete">Delete</button>
+            <button class="delete" id="clear">Clear</button>
         </div>
         <div class="numbers">
-            <button>7</button>
-            <button>8</button>
-            <button>9</button>
-            <button>/</button>
-            <button>4</button>
-            <button>5</button>
-            <button>6</button>
-            <button>*</button>
-            <button>1</button>
-            <button>2</button>
-            <button>3</button>
-            <button>-</button>
-            <button>.</button>
-            <button>0</button>
-            <button>=</button>
-            <button>+</button>
+            <button id="button-7" >7</button>
+            <button id="button-8" >8</button>
+            <button id="button-9" >9</button>
+            <button id="button-division" >/</button>
+            <button id="button-4" >4</button>
+            <button id="button-5" >5</button>
+            <button id="button-6" >6</button>
+            <button id="button-multiply" >*</button>
+            <button id="button-1" >1</button>
+            <button id="button-2" >2</button>
+            <button id="button-3" >3</button>
+            <button id="button-subtract" >-</button>
+            <button id="button-point" >.</button>
+            <button id="button-0" >0</button>
+            <button id="button-equal" >=</button>
+            <button id="button-plus" >+</button>
         </div>
     </div>
     <script src="main.js"></script>
