--- a/index.html
+++ b/index.html
@@ -11,26 +11,26 @@
     <div class="container">
         <input class="display" id="display-id" placeholder="0">
         <div class="delete-buttons">
-            <button class="delete" id="delete">Delete</button>
+            <button class="delete" id="delete">+/-</button>
             <button class="delete" id="clear">Clear</button>
         </div>
         <div class="numbers">
-            <button id="button-7" >7</button>
-            <button id="button-8" >8</button>
-            <button id="button-9" >9</button>
-            <button id="button-division" >/</button>
-            <button id="button-4" >4</button>
-            <button id="button-5" >5</button>
-            <button id="button-6" >6</button>
-            <button id="button-multiply" >*</button>
-            <button id="button-1" >1</button>
-            <button id="button-2" >2</button>
-            <button id="button-3" >3</button>
-            <button id="button-subtract" >-</button>
-            <button id="button-point" >.</button>
-            <button id="button-0" >0</button>
-            <button id="button-equal" >=</button>
-            <button id="button-plus" >+</button>
+            <button class="color-buttons" id="button-7" >7</button>
+            <button class="color-buttons" id="button-8" >8</button>
+            <button class="color-buttons" id="button-9" >9</button>
+            <button class="color-operator" id="button-division" >/</button>
+            <button class="color-buttons" id="button-4" >4</button>
+            <button class="color-buttons" id="button-5" >5</button>
+            <button class="color-buttons" id="button-6" >6</button>
+            <button class="color-operator" id="button-multiply" >*</button>
+            <button class="color-buttons" id="button-1" >1</button>
+            <button class="color-buttons" id="button-2" >2</button>
+            <button class="color-buttons" id="button-3" >3</button>
+            <button class="color-operator" id="button-subtract" >-</button>
+            <button class="color-equal" id="button-point" >.</button>
+            <button class="color-buttons" id="button-0" >0</button>
+            <button  class="color-equal" id="button-equal" >=</button>
+            <button class="color-operator" id="button-plus" >+</button>
         </div>
     </div>
     <script src="main.js"></script>
